# performance-benchmark

./: .gitattributes  .gitignore  BUCK  README.md
collector/: BUCK  Cargo.toml  filter.json  nohup.out  nohup.txt  perf.list  perf.sh  perf_analyze.sh  perf_record.sh  perf_test.sh  test.sh
collector/results/: compile_time_results.json  compile_time_statistics.json  runtime_results.json  runtime_statistics.json
collector/src/: lib.rs  main.rs  toolchain.rs
collector/src/benchmark/: benchmark.rs  mod.rs  profile.rs  scenario.rs
collector/src/compile_time/: cargo_package_process.rs  cargo_single_process.rs  mod.rs  result.rs
collector/src/csv_transfer/: compile_time.rs  mod.rs  runtime.rs
collector/src/execute/: mod.rs
collector/src/mir_analyze/: mir_analyze.rs  mir_generate.rs  mod.rs
collector/src/morpheme_miner/: miner.rs  mod.rs
collector/src/pca_analysis/: mod.rs  pca_data.rs
collector/src/perf_analyze/: analyze.rs  data_process.rs  mod.rs
collector/src/runtime/: cargo_bench_process.rs  cargo_example_process.rs  cargo_package_process.rs  cargo_test_process.rs  measure.rs  mod.rs  result.rs
collector/src/src_code_analyze/: analyzer.rs  dependancy.rs  entry.rs  mod.rs
collector/src/statistics/: compile_time_stat.rs  mod.rs  runtime_stat.rs  statistic.rs
collector/src/utils/: command.rs  fs.rs  mod.rs  read2.rs
collector/test/binary_size/: compiled_binary_size.json
collector/test/rustperf/: await_call_tree.mir  deeply_nested_multi.mir  encoding.mir  issue_1.mir  issue_2.mir  libc.mir  projection_caching.mir  regress.mir  token_stream.mir  webpush.mir  wf_projection.mir
data_manage/: BUCK  Cargo.toml
data_manage/src/: commannds.rs  compare_stat.rs  main.rs  merge_stat.rs
data_manage/src/compare_stats/: compare_data.rs  compare_stat.rs  compare_stat_2d.rs  data.rs  mod.rs  stats.rs
data_manage/src/merge_stats/: merge_runtime_stat.rs  merge_stat.rs  mod.rs
data_manage/src/normalize_stats/: mod.rs  normalize_data.rs
(+179 files in other folders)
