[package]
name = "collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[profile.release]
#debug = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "3.2", features = ["derive"] }
jobserver = "0.1.21"
log = "0.4"
filetime = "0.2.14"
walkdir = "2"
tempfile = "3"
env_logger = "0.8"
libc = "0.2"
lazy_static = "1"
crossbeam-utils = "0.8"
thiserror = "1"
cargo_metadata = "0.15.0"
csv = "1.1"
rayon = "1.7"

[target.'cfg(windows)'.dependencies]
miow = "0.3"
windows-sys = { version = "0.36.1", features = ["Win32_Foundation"] }
