[package]
name = "collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[profile.release]
#debug = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "3.0.9", features = ["derive"] }
jobserver = "0.1.21"
log = "0.4"
filetime = "0.2.14"
walkdir = "2"
tempfile = "3"
env_logger = "0.10.1"
libc = "0.2"
lazy_static = "1"
crossbeam-utils = "0.8"
thiserror = "1"
cargo_metadata = "0.18.1"
csv = "1.1"
rayon = "1.7"
regex = "1.10.2"
nalgebra = "0.32.4"

[target.'cfg(windows)'.dependencies]
miow = "0.6.0"
windows-sys = { version = "0.52.0", features = ["Win32_Foundation"] }