[package]
name = "manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
collector = { path = "../collector" }
clap = { version = "3.0.9", features = ["derive"] }
nalgebra = "0.32.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
